Colors & Theme SASS function additions A tint & mix function added to colors.scss file to tint background color (variable) and add/mix white to background color (variable). No changes made to index.html file - added an id to use in css but deleted it.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -1,10 +1,15 @@
 body {
-background-color: $background-color;
+background-color: tint($background-color, 2%);
 color: $font-color;
 };
 
 .quote {
-background-color: $gray-font; // gray
+background-color: $font-color; // gray
 font-size: 30px;
 };
+
+// .foo {
+//   color: hsl( 300, 100%, 100% );
+//   background: pink;
+// }
 //@import 'index'
