--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -3,5 +3,15 @@
 //Need to link/import these color variables usuing @ import in index file
 
 $background-color: #fefefe;
-$font-color: #4e4e4e;
+$font-color: green;
 $gray-font: #e5e5e5;
+$darker-background: darken($background-color, 10%);
+
+@function tint($color, $percentage){
+  @return mix(white, $color, $percentage);
+}
+@function shade($color, $percentage){
+  @return mix(black, $color, $percentage);
+}
+
+//$sass-white: hsl(330, 50%, 60%);
