Added Breakpoint, Breakpoints, and Typography SASS values set and declared in breakpoint.scss are used in breakpoints.scss. Non-SASS css created in Typography.scss file.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -8,6 +8,7 @@ background-color: $font-color; // gray
 font-size: 30px;
 };
 
+$vertical-margin: 20px;
 // .foo {
 //   color: hsl( 300, 100%, 100% );
 //   background: pink;
