--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,7 +3,11 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 @import 'colors';
 
-@import 'theme'
+@import 'theme';
+
+@import 'typography';
+
+@import 'breakpoints';
 // $background-color: #fefefe;
 // $font-color: #4e4e4e;
 // $gray-font: #e5e5e5;
